--- a/tpreact/vercel.json
+++ b/tpreact/vercel.json
@@ -1,16 +1,12 @@
-    {
+{
     "version": 2,
     "builds": [
-        { "src": "build/**", "use": "@vercel/static" }
+        {
+        "src": "public/**",
+        "use": "@vercel/static"
+        }
     ],
     "routes": [
-        {
-        "src": "/(.*).(js|css|png|jpg|jpeg|gif|ico|json)",
-        "dest": "/build/$1.$2",
-        "headers": {
-            "cache-control": "public, max-age=31536000, immutable"
-        }
-        },
-        { "src": "/(.*)", "dest": "/index.html" }
+        { "src": "/(.*)", "dest": "/public/$1" }
     ]
-    }
+}
